--- a/estilos/estilos.css
+++ b/estilos/estilos.css
@@ -4,18 +4,18 @@ body {
     margin: 0;
     padding: 0;
     background-color: #f4f4f4;
-    color: #333;
+    color: #007eb1;
 }
 
 header {
-    background: #333;
+    background: #00abf0;
     color: #fff;
     padding: 10px 20px;
     text-align: center;
 }
 
 nav {
-    background: #444;
+    background: #00b6ff;
     padding: 10px;
 }
 
@@ -50,6 +50,6 @@ section {
 footer {
     text-align: center;
     padding: 10px;
-    background: #333;
+    background: #007eb1;
     color: #fff;
 }
