--- a/estilos/estilo_galeria.css
+++ b/estilos/estilo_galeria.css
@@ -2,7 +2,7 @@
 body {
     font-family: Arial, sans-serif;
     background-color: #f0f8ff;
-    color: #333;
+    color: #007eb1;
     margin: 0;
     padding: 20px;
 }
@@ -10,7 +10,7 @@ body {
 
 header {
     text-align: center;
-    background-color: #333;
+    background-color: #00abf0;
     color: #fff;
     padding: 15px 0;
     margin-bottom: 20px;
@@ -21,7 +21,7 @@ header {
     list-style: none;
     display: flex;
     justify-content: center;
-    background-color: #444;
+    background-color: #00b6ff;
     padding: 10px;
     margin: 0;
 }
@@ -34,13 +34,13 @@ header {
     text-decoration: none;
     color: #fff;
     padding: 8px 15px;
-    background-color: #555;
+    background-color: #00b6ff;
     border-radius: 5px;
     transition: background-color 0.3s;
 }
 
 .navbar a:hover {
-    background-color: #666;
+    background-color: #00b6ff;
 }
 
 
@@ -70,7 +70,7 @@ header {
 footer {
     text-align: center;
     padding: 10px;
-    background-color: #333;
+    background-color: #007eb1;
     color: #fff;
     margin-top: 20px;
 }
